<resources>
    <string name="app_name">PopMovies</string>

    <string name="message_loading">Loading&#8230;</string>

    <string name="error_title">Error</string>
    <string name="confirm_button">GOT IT</string>
    <string name="not_connected">No internet connection</string>

    <string name="movie_poster_transition">movie_poster_transition</string>

    <string name="title_activity_movies">Popular Movies</string>
    <string name="menu_search">Search</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_sort_popular">Most Popular</string>
    <string name="menu_sort_top_rated">Highest Rated</string>
    <string name="menu_sort_favorite">Favorites</string>
    <string name="movies_no_data">No Movies Found</string>

    <string name="search_movies_hint">Try typing at least 3 characters</string>

    <string name="title_activity_movie_detail">Movie Detail</string>
    <string name="menu_share">Share</string>
    <string name="rating">%1$s/10</string>
    <string name="trailers_title">Trailers</string>
    <string name="reviews_title">Reviews</string>
    <string name="review_on_web_button">View on Web</string>
    <string name="trailers_no_data">No Trailers</string>
    <string name="reviews_no_data">No Reviews</string>
    <string name="favorite_added">Added to favorites</string>
    <string name="favorite_removed">Removed from favorites</string>

    <string name="preview_title">Title</string>
    <string name="preview_release">Release Date</string>
    <string name="preview_rating">Rating</string>
    <string name="preview_synopsis">Synopsis</string>
    <string name="preview_author">Author</string>
    <string name="preview_content">Content</string>
</resources>
