<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin_small"
        android:textStyle="bold"
        tools:text="@string/preview_author" />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/author"
        android:layout_marginTop="@dimen/extra_double_line_space"
        android:ellipsize="end"
        android:maxLines="5"
        tools:text="@string/preview_content" />

    <Button
        android:id="@+id/visit"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/content"
        android:text="@string/review_on_web_button"
        android:textColor="@color/colorAccent"
        android:theme="@style/FlatButton" />

</RelativeLayout>