<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/view_margin">

    <com.icerrate.popularmovies.view.common.ProportionalImageView
        android:id="@+id/poster"
        android:layout_width="@dimen/poster_width"
        android:layout_height="@dimen/poster_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/poster_placeholder" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/view_margin"
        android:layout_marginStart="@dimen/view_margin"
        android:layout_marginTop="@dimen/overlap_top_extra"
        android:textColor="@color/black"
        android:textSize="@dimen/text_22"
        app:layout_constraintLeft_toRightOf="@+id/poster"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/preview_title" />

    <TextView
        android:id="@+id/release_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/view_margin"
        android:layout_marginStart="@dimen/view_margin"
        android:layout_marginTop="@dimen/extra_line_space"
        android:textSize="@dimen/text_18"
        app:layout_constraintLeft_toRightOf="@+id/poster"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:text="@string/preview_release" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/view_margin"
        android:layout_marginStart="@dimen/view_margin"
        android:layout_marginTop="@dimen/extra_line_space"
        android:drawableEnd="@drawable/ic_star"
        android:drawableRight="@drawable/ic_star"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/poster"
        app:layout_constraintTop_toBottomOf="@+id/release_date"
        tools:text="@string/preview_rating" />

    <TextView
        android:id="@+id/synopsis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poster"
        tools:text="@string/preview_synopsis" />

    <RelativeLayout
        android:id="@+id/trailers_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/synopsis">

        <TextView
            android:id="@+id/trailers_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trailers_title"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_18"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/trailers_title"
            android:layout_marginTop="@dimen/view_margin"
            android:orientation="horizontal"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            tools:listitem="@layout/item_trailer" />

        <TextView
            android:id="@+id/trailers_no_data"
            android:layout_width="match_parent"
            android:layout_height="?android:listPreferredItemHeightSmall"
            android:layout_below="@+id/trailers_title"
            android:gravity="center"
            android:text="@string/trailers_no_data"
            android:textStyle="bold"
            android:visibility="invisible" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/reviews_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trailers_group">

        <TextView
            android:id="@+id/reviews_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reviews_title"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_18"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reviews_title"
            android:layout_marginTop="@dimen/view_margin"
            tools:listitem="@layout/item_review" />

        <TextView
            android:id="@+id/reviews_no_data"
            android:layout_width="match_parent"
            android:layout_height="?android:listPreferredItemHeightSmall"
            android:layout_below="@+id/reviews_title"
            android:gravity="center"
            android:text="@string/reviews_no_data"
            android:textStyle="bold"
            android:visibility="invisible" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>